# clippy

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  activate_env.sh  clippy.py  docker-compose.yml  docker-start.sh  main.py  pyproject.toml  requirements.txt  setup.py  start_server.py  test_api_basic.py  test_api_endpoints.py
clippy/: __init__.py  api.py  cli.py  generator.py  models.py  server.py
test/: functional.sh
tests/: __init__.py  conftest.py  test_cli.py  test_generator.py
